fixed artist background image creating margins on the right and white space

--- a/ontour/src/index.css
+++ b/ontour/src/index.css
@@ -23,7 +23,7 @@ h4 {
 #artist-background{
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 33vh;
+  height: 40vh;
   position: relative;
 }
 
